// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RECEIVE_CAT 1`] = `
Immutable.Map {
  "imageSrc": "bar",
}
`;

exports[`cat reducer without state uses default 1`] = `
Immutable.Map {
  "imageSrc": "",
}
`;
